--- a/maxway/style/custom.scss
+++ b/maxway/style/custom.scss
@@ -65,9 +65,9 @@ $colorViolet: #800a7a;
     -webkit-mask-image: url("../icons/plus.svg");
   }
 
-  &.icon-play{
-    mask-image: url("../icons/play-market.svg");
-    -webkit-mask-image: url("../icons/play-market.svg");
+  &.icon-googleplay {
+    mask-image: url("../icons/googleplay.svg");
+    -webkit-mask-image: url("../icons/googleplay.svg");
   }
 
   &.icon-apple {
