--- a/Project 3/style/custom.scss
+++ b/Project 3/style/custom.scss
@@ -72,28 +72,28 @@ body {
           display: flex;
           align-items: center;
           letter-spacing: -0.02em;
-          color: $colorLight ;
+          color: $colorLight;
         }
         button {
           width: 289px;
           height: 61px;
           margin-top: 62px;
-          background: $colorLight ;
+          background: $colorLight;
           color: $colorDark;
           border: none;
-          &:hover{
+          &:hover {
             background-color: $colorDark;
             color: $colorLight;
           }
         }
-        
       }
     }
   }
-  .header-down{
-     .container {
-       margin-top: 106px;
-       .title{
+  .header-down {
+    .container {
+      position: relative;
+      margin-top: 106px;
+      .title {
         font-style: bolder;
         font-weight: 500;
         font-size: 40px;
@@ -102,35 +102,35 @@ body {
         text-transform: uppercase;
         color: $colorDark;
         margin-bottom: 40px;
-       }
-        .owl-carousel-1{
-          .item{
-            background: $colorLight;
-            min-height:450px;
-            width: 592px;
+      }
+      .owl-carousel-1 {
+        .item {
+          background: $colorLight;
+          min-height: 450px;
+          width: 592px;
 
-           .card-image{
+          .card-image {
             width: 460px;
             height: 350px;
             background-image: url(../images/kross-1.png);
             margin-left: 66px;
             background-repeat: no-repeat;
             background-size: cover;
-           }
+          }
 
-           .card-content {
-             margin-left: 30px;
-             margin-top: -38px;
-             h5{
-               font-family:SFPRODISPLAYBOLD ;
+          .card-content {
+            margin-left: 30px;
+            margin-top: -38px;
+            h5 {
+              font-family: SFPRODISPLAYBOLD;
               font-weight: 600;
               font-size: 22px;
               line-height: 26px;
               align-items: center;
               text-transform: capitalize;
               color: $colorDark;
-             }
-             h6{
+            }
+            h6 {
               font-style: normal;
               font-weight: normal;
               font-size: 14px;
@@ -138,30 +138,32 @@ body {
               align-items: center;
               text-transform: capitalize;
               color: $colorDark;
-             }
-             .custom-btn-2 {
-               width: 109px;
-               height: 40px;
-               padding: 6px 32px;
-              background: $colorDark ;
+            }
+            .custom-btn-2 {
+              width: 109px;
+              height: 40px;
+              padding: 6px 32px;
+              background: $colorDark;
               color: $colorLight;
               border: none;
 
-              &:hover{
+              &:hover {
                 background-color: violet;
                 color: $colorDark;
               }
-             }
-             item:nth-child(2){
-               background-image: url(../images/kross-2.png);
-
-             }
-             
-             
-             
-
+            }
+            item:nth-child(2) {
+              background-image: url(../images/kross-2.png);
+            }
           }
-          
+        }
+        &.owl-carousel {
+          position: initial;
+          .owl-nav {
+            position: absolute;
+            top: 0;
+            right: 0;
+          }
         }
       }
     }
