--- a/Project 3/style/custom.scss
+++ b/Project 3/style/custom.scss
@@ -15,7 +15,7 @@ $colorWhite: #f0eaea98;
 $colorDark: #000000;
 
 body {
-  background-color: $colorWhite;
+  background-color: aliceblue;
   font-family: SFPRODISPLAYREGULAR !important;
   height: 5000px;
   .container {
@@ -109,6 +109,8 @@ body {
           min-height: 450px;
           width: 592px;
 
+         
+
           .card-image {
             width: 460px;
             height: 350px;
@@ -152,20 +154,103 @@ body {
                 color: $colorDark;
               }
             }
-            item:nth-child(2) {
-              background-image: url(../images/kross-2.png);
-            }
+            
+            
           }
+          
+          
         }
+        
+        
         &.owl-carousel {
           position: initial;
           .owl-nav {
             position: absolute;
             top: 0;
             right: 0;
+            
           }
         }
       }
     }
   }
+
+  .tab-header{
+    margin-top: 100px;
+    .container{
+      .tab-title{
+        font-weight: 500;
+        font-size: 40px;
+        font-style: bolder ;
+        line-height: 48px;
+        display: flex;
+        align-items: center;
+        text-transform: uppercase;
+        color: $colorDark;
+       
+      }
+      .owl-carousel-2{
+        margin-top: 41px;
+        .item{
+          .tab-card{
+            width: 289px;
+            min-height: 349px;
+            background: $colorLight;
+            .tab-image{
+              width: 100%;
+              height: 244px;
+              background-image: url(../images/tab-k1.png);
+              background-repeat: no-repeat;
+              background-size: cover;
+              cursor: pointer;
+            }
+            .tab-content{
+              margin:20px 0 0 20px;
+              position: relative;
+              h5{
+                font-family: SFPRODISPLAYMEDIUM ;
+                font-size: 16px;
+                line-height: 21px;
+                align-items: center;
+              }
+              h4{
+                font-family: SFPRODISPLAYBOLD ;
+                font-size: 24px;
+                line-height: 29px;
+                font-weight: bold;
+                color: $colorDark;
+              }
+              .custom-btn-3{
+                width: 46px;
+                height: 46px;
+                border-radius: 50%;
+                background: $colorWhite;
+                position: absolute;
+                top: 19px;
+                right: 20px;
+                border: none;
+                
+                img{
+                margin-left:-2px ;
+                 width: 18px;
+                 height: 21px;
+                }
+              }
+              .custom-btn-3:hover {
+                background:violet;
+              }
+
+
+            }
+          }
+        }
+      }
+      
+    }
+
+
+  }
+  
+
+
 }
