--- a/Project 3/style/custom.scss
+++ b/Project 3/style/custom.scss
@@ -15,7 +15,7 @@ $colorWhite: #f0eaea98;
 $colorDark: #000000;
 
 body {
-  background-color: aliceblue;
+  background-color: $colorWhite;
   font-family: SFPRODISPLAYREGULAR !important;
   height: 5000px;
   .container {
@@ -204,6 +204,7 @@ body {
               background-size: cover;
               cursor: pointer;
             }
+            
             .tab-content{
               margin:20px 0 0 20px;
               position: relative;
@@ -251,6 +252,52 @@ body {
 
   }
   
+  .content-1{
+   margin-top: 100px;
+    .container-fluid{
+      width: 100%;
+      height: 500px;
+      background-image: url(../images/background-2.png);
+      background-repeat: no-repeat;
+      background-size: cover;
+      .container{
+        .content-box{
+          h1{
+            font-family:SFPRODISPLAYBOLD;
+            font-style: normal;
+            font-weight: 800;
+            font-size: 50px;
+            line-height: 65px;
+            letter-spacing: -0.02em;
+            color: #000000;
+            padding-top: 129px;
+          }
+          h3 {
+            margin-bottom: 70px;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 26px;
+            line-height: 31px;
+            letter-spacing: -0.02em;
+            color: #000000;
+          }
+          .custom-btn-4 {
+              width: 289px;
+              height: 61px;
+              background: $colorDark;
+              color: $colorLight;
+             border: none;
+              &:hover {
+                background-color: $colorLight;
+                color: $colorDark;
+                border: 1px solid  violet;
+             }
+          }
+          
 
+      }
+    }
+  }
 
+ }
 }
