--- a/Portfolio/assets/style/style.css
+++ b/Portfolio/assets/style/style.css
@@ -5,16 +5,18 @@
   --header-height: 3rem;
 
   --hue-color: 250;
-
   /* colors */
   --first-color: hsl(var(--hue-color), 69%, 61%);
   --first-color-second: hsl(var(--hue-color), 69%, 61%);
-  --first-color-lighter: hsl(var(--hue-color), 57%, 53%);
-  --title-color: hsl(var(--hue-color), 92%, 85%);
-  --text-color: hsl(var(--hue-color), 8%, 15%);
+  --first-color-alt: hsl(var(--hue-color), 57%, 53%);
+  --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
+  --title-color: hsl(var(--hue-color), 8%, 15%);
+  --text-color: hsl(var(--hue-color), 8%, 45%);
   --text-color-light: hsl(var(--hue-color), 8%, 65%);
   --input-color: hsl(var(--hue-color), 70%, 96%);
   --body-color: hsl(var(--hue-color), 60%, 99%);
+  --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
+  --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
   --container-color: #fff;
 
   /* Font */
@@ -64,8 +66,38 @@
     --smaller-font-size: 0.813rem;
   }
 }
+/* Variables dark theme */
+body.dark-theme{
+ 
+  /* colors */
+  
+  --first-color-second: hsl(var(--hue-color), 30%, 8%);
+  --title-color: hsl(var(--hue-color), 8%, 95%);
+  --text-color: hsl(var(--hue-color), 8%, 75%);
+  --input-color: hsl(var(--hue-color), 29%, 16%);
+  --body-color: hsl(var(--hue-color), 28%, 12%);
+  --container-color: hsl(var(--hue-color) 29%, 16%);
+  --scroll-bar-color: hsl(var(--hue-color), 12%, 48%);
+  --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
+
+}
 
 /* --Button Dark Light-- */
+.nav_btns{
+  display: flex;
+  align-items: center;
+}
+
+.change-theme{
+  font-size: 1.25rem;
+  color: var(--title-color);
+  margin-right: var(--mb-1);
+  cursor: pointer;
+}
+
+.change-theme:hover{
+  color: var(--first-color);
+}
 
 /* --Base-- */
 * {
@@ -230,6 +262,16 @@ img {
   bottom: 0;
 }
 
+/* Active link */
+.active-link {
+  color: var(--first-color);
+}
+
+/* change background header */
+.scroll-header{
+   box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+}
+
 /* --Home-- */
 .home_container {
   gap: 1rem;
@@ -323,22 +365,31 @@ img {
   transition: 0.3s;
 }
 
+.button--white {
+  background-color: #fff;
+  color: var(--first-color);
+}
+
+.button--white:hover {
+  background-color: #fff;
+}
+
 .button--flex {
   display: inline-flex;
   align-items: center;
 }
 
-.button--small{
-  padding: .75rem 1rem;
+.button--small {
+  padding: 0.75rem 1rem;
 }
 
-.button--link{
+.button--link {
   padding: 0;
-  background-color: transparent ;
+  background-color: transparent;
   color: var(--first-color);
 }
 
-.button--link:hover{
+.button--link:hover {
   background-color: transparent;
   color: var(--first-color-second);
 }
@@ -567,60 +618,59 @@ img {
 .qualification_active[data-content] {
   display: block;
 }
-.qualification_button .qualification_active{
+.qualification_button .qualification_active {
   color: var(--first-color);
 }
 
-
 /* ====Services=== */
 
-.services_container{
+.services_container {
   gap: 1.5rem;
   grid-template-columns: repeat(2, 1fr);
 }
 
-.services_content{
+.services_content {
   position: relative;
   background-color: var(--container-color);
-  padding: 3.5rem .5rem 1.25rem 1.5rem ;
-  border-radius: .25rem;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, .15);
-  transition: .3s;
+  padding: 3.5rem 0.5rem 1.25rem 1.5rem;
+  border-radius: 0.25rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+  transition: 0.3s;
 }
 
-.services_content:hover{
-  box-shadow: 0 4px 8px rgba(0, 0, 0, .15) ;
+.services_content:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
 }
 
-.services_icon{
+.services_icon {
   display: block;
   font-size: 1.5rem;
   color: var(--h3-font-size);
   margin-bottom: var(--mb-1);
 }
 
-.services_title{
+.services_title {
   font-size: var(--h3-font-size);
   margin-bottom: var(--mb-1);
-  font-weight:var(--font-medium);
+  font-weight: var(--font-medium);
 }
 
-.services_button{
+.services_button {
   cursor: pointer;
   font-size: var(--small-font-size);
 }
 
-.services_button:hover .button_icon{
-  transform: translateX(.25rem);
+.services_button:hover .button_icon {
+  transform: translateX(0.25rem);
 }
 
-.services_modal{
+.services_modal {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -628,29 +678,29 @@ img {
   z-index: var(--z-modal);
   opacity: 0;
   visibility: hidden;
-  transition: .3s;
+  transition: 0.3s;
 }
 
-.services_modal-content{
+.services_modal-content {
   position: relative;
   background-color: var(--container-color);
   padding: 1.5rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
-.services_modal-services{
+.services_modal-services {
   row-gap: 1rem;
 }
 
-.services_modal-service{
+.services_modal-service {
   display: flex;
 }
-.services_modal-title{
+.services_modal-title {
   font-size: var(--h3-font-size);
   font-weight: var(--font-medium);
   margin-bottom: var(--mb-1-5);
 }
-.services_modal-close{
+.services_modal-close {
   position: absolute;
   top: 1rem;
   right: 1rem;
@@ -659,13 +709,317 @@ img {
   cursor: pointer;
 }
 
-.services_modal-icon{
+.services_modal-icon {
   color: var(--first-color);
   margin-right: var(--mb-0-25);
 }
 /* Active modal */
 
-.active-modal{
+.active-modal {
   opacity: 1;
   visibility: visible;
+}
+/* =========Portfolio======== */
+.portfolio_container {
+  overflow: initial;
+}
+
+.portfolio_content {
+  padding: 0 1.5rem;
+}
+
+.portfolio_img {
+  width: 265px;
+  border-radius: 0.5rem;
+  justify-self: center;
+}
+
+.portfolio_title {
+  font-size: var(--h3-font-size);
+  margin-bottom: var(--mb-0-5);
+}
+
+.portfolio_description {
+  margin-bottom: var(--mb-0-75);
+}
+.portfolio_button:hover .button_icon {
+  transform: scaleX(0.25rem);
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  content: "" !important;
+}
+
+.swiper-portfolio-icon {
+  font-size: 2rem;
+  color: var(--first-color);
+}
+
+.swiper-button-prev {
+  left: -0.5rem;
+}
+.swiper-button-next {
+  right: -0.5rem;
+}
+
+.swiper-container-horizontal > .swiper-pagination-bullets {
+  bottom: -2.5rem;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: var(--first-color);
+}
+
+.swiper-button-prev,
+.swiper-button-next,
+.swiper-pagination-bullet {
+  outline: none;
+}
+
+/*=============Project Mine================== */
+
+.project {
+  text-align: center;
+}
+
+.project_bg {
+  background-color: var(--first-color);
+  padding-top: 3rem;
+}
+
+.project_title {
+  font-size: var(--h2-font-size);
+  margin-bottom: var(--mb-0-75);
+}
+
+.project_description {
+  margin-bottom: var(--mb-1-5);
+}
+
+.project_title,
+.project_description {
+  color: #fff;
+}
+
+.project_img {
+  width: 232px;
+  justify-self: center;
+}
+
+/* ====================TESTIMONIAL=============== */
+
+.testimonial_data,
+.testimonial_header {
+  display: flex;
+}
+.testimonial_data {
+  justify-content: space-between;
+  margin-bottom: var(--mb-1);
+}
+
+.testimonial_img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-right: var(--mb-0-75);
+}
+
+.testimonial_name {
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-medium);
+}
+
+.testimonial_client {
+  font-size: var(--small-font-size);
+  color: var(--text-color-light);
+}
+
+.testimonial_description {
+  margin-bottom: var(--mb-2-5);
+}
+
+.testimonial_icon-star {
+  color: var(--first-color);
+}
+
+.swiper-container .swiper-pagination-testimonial {
+  bottom: 0;
+}
+
+/* ================Contact Me====================== */
+.contact_container {
+  row-gap: 3rem;
+}
+
+.contact_information {
+  display: flex;
+  margin-bottom: var(--mb-2);
+}
+
+.contact_icon {
+  font-size: 2rem;
+  color: var(--first-color);
+  margin-right: var(--mb-0-75);
+}
+
+.contact_title {
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-medium);
+}
+
+.contact_subtitle {
+  font-size: var(--small-font-size);
+  color: var(--text-color-light);
+}
+
+.contact_content {
+  background-color: var(--input-color);
+  border-radius: 0.5rem;
+  padding: 0.7rem 1rem 0.25rem;
+}
+
+.contact_label {
+  font-size: var(--smaller-font-size);
+  color: var(--title-color);
+}
+
+.contact_input {
+  width: 100%;
+  background-color: var(--input-color);
+  color: var(--text-color);
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  border: none;
+  outline: none;
+  padding: 0.25rem 0.5rem 0.5rem 0;
+}
+
+/* ===================FOOTER============= */
+
+.footer {
+  padding-top: 2rem;
+}
+
+.footer_container {
+  row-gap: 3.5rem;
+}
+
+.footer_bg {
+  background-color: var(--first-color);
+  padding: 2rem 0 3rem;
+}
+
+.footer_title {
+  font-size: var(--h1-font-size);
+  margin-bottom: var(--mb-0-25);
+}
+.footer_subtitle {
+  font-size: var(--small-font-size);
+}
+
+.footer_links {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
+}
+
+.footer_link:hover {
+  color: var(--first-color-lighter);
+}
+
+.footer_social {
+  font-size: 1.25rem;
+  margin-right: var(--mb-1-5);
+}
+
+.footer_social:hover {
+  color: var(--first-color-lighter);
+}
+
+.footer_copy {
+  font-size: var(--smaller-font-size);
+  text-align: center;
+  color: var(--text-color-light);
+  margin-top: var(--mb-3);
+}
+
+.footer_title,
+.footer_subtitle,
+.footer_link,
+.footer_social {
+  color: #fff;
+}
+
+/* ===========Scroll Up============ */
+.scrollup{
+  position: fixed;
+  right: 1rem;
+  bottom: -20%;
+  background-color: var(--first-color);
+  opacity: .8;
+  padding: 0 .3rem;
+  border-radius: .4rem;
+  z-index: var(--z-tooltip);
+  transition: .4s;
+}
+
+.scrollup:hover{
+  background-color: var(--first-color-second);
+}
+
+.scrollup_icon{
+  font-size: 1.5rem;
+  color: #fff;
+}
+
+/* Show scroll */
+.show-scroll{
+  bottom: 5rem;
+}
+
+/* ===========Scroll bar============ */
+::-webkit-scrollbar{
+  width: .60rem;
+  background-color: var(--scroll-bar-color);
+  border-radius: .5rem;
+
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: var(--scroll-thumb-color);
+  border-radius: .5rem;
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background-color: var(--text-color-light);
+}
+
+/* Media Queries */
+
+/* for small devices */
+@media screen and (max-width:350px) {
+
+  .container{
+    margin-left: var(--mb-1);
+    margin-right: var(--mb-1);
+  }
+  .nav_menu{
+    padding: 2rem .25rem 4rem;
+  }
+  .nav_list{
+    column-gap: 0;
+  }
+
+  .home_content{
+    grid-template-columns: .25fr 3fr;
+  }
+  .home_blob{
+    width: 180px;
+  }
+
+
+  .skills_title{
+    font-size:var(--normal-font-size) ;
+  }
 }
