--- a/Portfolio/assets/style/style.css
+++ b/Portfolio/assets/style/style.css
@@ -301,7 +301,7 @@ img {
   fill: var(--first-color);
 }
 .home_blob-img {
-  width: 170px;
+  width: 300px;
 }
 
 .home_data {
@@ -309,7 +309,8 @@ img {
 }
 
 .home_title {
-  font-size: var(--big-font-size);
+  font-size: 38px;
+  color: var(--text-color);
 }
 
 .home_subtitle {
@@ -400,6 +401,7 @@ img {
   border-radius: 0.5rem;
   justify-self: center;
   align-self: center;
+  background-size: cover;
 }
 
 .about_description {
@@ -493,7 +495,7 @@ img {
 }
 
 .skills_bar {
-  background-color: var(--title-color);
+  background-color: var(--first-color-lighter);
 }
 
 .skills_percetage {
@@ -816,6 +818,7 @@ img {
 .testimonial_data {
   justify-content: space-between;
   margin-bottom: var(--mb-1);
+  padding: 10px;
 }
 
 .testimonial_img {
@@ -837,6 +840,7 @@ img {
 
 .testimonial_description {
   margin-bottom: var(--mb-2-5);
+  padding: 10px;
 }
 
 .testimonial_icon-star {
@@ -1021,5 +1025,264 @@ img {
 
   .skills_title{
     font-size:var(--normal-font-size) ;
+  }
+
+  .qualification_data{
+    gap: .5rem;
+  }
+
+  .services_container{
+    grid-template-columns: max-content;
+    justify-content: center;
+  }
+
+  .services_content{
+    padding-right: 3.5rem;
+  }
+  .services_modal{
+  padding: 0 .5rem;
+}
+
+.project_img{
+  width: 200px;
+}
+
+.testimonial_data,
+.testimonial_header{
+  flex-direction: column;
+  align-items: center;
+}
+.testimonial_img{
+  margin-right: 0;
+  margin-bottom: var(--mb-0-25);
+}
+.testimonial_data,
+.testimonial_description{
+  text-align: center;
+}
+
+}
+
+/* for medium drvices */
+
+@media screen and (min-width:568px) {
+  
+  .home_content{
+    grid-template-columns: max-content 1fr 1fr;
+  }
+  .home_data{
+    grid-column: initial;
+  }
+  .home_img{
+    order: 1;
+    justify-self: center ;
+  }
+
+  .about_container,
+  .skills_container,
+  .project_container,
+  .contact_container,
+  .footer_container{
+    grid-template-columns: repeat(2, 1fr) ;
+  }
+  
+  .qualification_sections{
+    display: grid;
+    grid-template-columns: .6fr;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  
+  .container{
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  body{
+    margin: 0;
+  }
+
+  .section{
+    padding: 6rem 0 2rem;
+  }
+
+  .section_subtitle{
+    margin-bottom: 4rem;
+  }
+
+  .header{
+    top: 0;
+    bottom: initial;
+  }
+  
+  .header,
+  .main,
+  .footer_container{
+    padding: 0 1rem;
+  }
+
+  .nav{
+    height: calc(var(--header-height) + 1.5rem);
+    column-gap: 1rem ;
+  }
+  .nav_icon,
+  .nav_close,
+  .nav_toggle{
+    display: none;
+  }
+  .nav_list{
+    display: flex;
+    column-gap: 2rem;
+  }
+  .nav_menu{
+    margin-left: auto
+  }
+  .change-theme{
+    margin: 0;
+  }
+
+  .home_container{
+    row-gap: 5rem;
+  }
+  .home_content{
+    padding-top: 5.5rem;
+    column-gap: 2rem;
+  }
+  .home_blob{
+    width: 270px;
+  }
+  .home_scroll{
+    display: block;
+  }
+  .home_scroll-button{
+    margin-left: 3rem;
+  }
+
+  .about_container{
+    column-gap: 5rem;
+  }
+  .about_img{
+    width: 350px;
+  }
+  .about_description{
+    text-align: initial;
+  }
+  .about_info{
+    justify-content: space-between;
+  }
+  .about_buttons{
+    justify-content: initial;
+  }
+
+  .qualification_tabs{
+    justify-content: center;
+  }
+  .qualification_button{
+    margin: 0 var(--mb-1);
+  }
+  .qualification_sections{
+    grid-template-columns: .5fr;
+  }
+
+  .services_container{
+    grid-template-columns: repeat(3, 218px);
+    justify-content: center;
+  }
+
+.services_icon{
+  font-size: 2rem;
+}
+.services_content{
+  padding: 6rem 0 2rem 2.5rem;
+}
+.services_modal-content{
+  width: 450px;
+}
+
+.portfolio_img{
+  width: 320px;
+}
+.portfolio_content{
+  align-items: center;
+}
+
+.project{
+  text-align: initial;
+}
+.project_bg{
+  background: none;
+}
+.project_container{
+  background-color: var(--first-color-second);
+  border-radius: 1rem;
+  padding: 3rem 2.5rem 0;
+  grid-template-columns: 1fr max-content;
+  column-gap: 3rem;
+}
+.project_data{
+  padding-top: .8rem;
+}
+
+.footer_container{
+  grid-template-columns: repeat(3, 1fr);
+}
+.footer_bg{
+  padding: 3rem 0 3.5rem;
+}
+.footer_links{
+  flex-direction: row;
+  column-gap: 2rem;
+}
+.footer_socials{
+  justify-self: flex-end;
+}
+.footer_copy{
+  margin-top: 4.5rem;
+}
+}
+
+
+/* for large devices  */
+
+@media screen and (min-width: 1024px) {
+  
+  .header,
+  .main,
+  .footer_container{
+    padding: 0;
+  }
+
+  .home_blob{
+    width: 320px;
+  }
+  .home_social{
+    transform: translateX(-6rem);
+  }
+  .services_container{
+    grid-template-columns: repeat(3, 238px);
+  }
+
+  .portfolio_content{
+    column-gap: 5rem;
+  }
+  .swiper-portfolio-icon{
+    font-size: 3.5rem;
+  }
+  .swiper-button-prev{
+    left: -3.5rem;
+  }
+  .swiper-button-next{
+    right: -3.5rem;
+  }
+  .swiper-container-horizontal > .swiper-pagination-bullets {
+    bottom: -4.5rem;
+  }
+  .contact_form{
+    width: 460px;
+  }
+  .contact_inputs{
+    grid-template-columns: repeat(2, 1fr);
   }
 }
